@@ -1,9 +1,12 @@
 buildscript {
     ext {
-        springBootVersion = '1.5.9.RELEASE'
+        springBootVersion = '2.0.0.M7'
     }
 
     repositories {
+        maven {
+            url 'https://repo.spring.io/libs-milestone'
+        }
         mavenCentral()
     }
 
@@ -15,9 +18,25 @@ buildscript {
 apply plugin: 'idea'
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
+compileJava {
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+
+    options.fork = true
+    options.forkOptions.executable = 'javac'
+
+    options.encoding = "UTF-8"
+//    options.compilerArgs += [
+//        "--add-modules", "java.xml.ws.annotations"
+//    ]
+}
 
 repositories {
+    maven {
+        url 'https://repo.spring.io/libs-milestone'
+    }
     mavenCentral()
 }
 
@@ -34,8 +53,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.projectlombok/lombok
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.18'
 
-    testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile('org.springframework.security:spring-security-test')
+//    testCompile('org.springframework.boot:spring-boot-starter-test')
+//    testCompile('org.springframework.security:spring-security-test')
 }
 
 task wrapper (type: Wrapper){
